# panda-3s

./: .gitignore  EXAMPLES.md  LICENSE  README.md  pyproject.toml
panda_3s/: __init__.py  cache.py  core.py  embedding.py  indexer.py
panda_3s/cache/: __init__.py  optimized.py
panda_3s/search/: __init__.py  core.py
panda_3s/utils/: hashing.py
panda_vector_search/: __init__.py  document_indexer.py  embedding_service.py
panda_vector_search/common_utilities/: __init__.py  hashing.py  validation.py
panda_vector_search/data_cache/: __init__.py  optimized.py
panda_vector_search/query_processor/: __init__.py  core.py
scripts/: performance_test.py
tests/: test_cache_manager.py  test_document_indexer.py  test_embedding_service.py  test_search.py
