[project]
name = "panda-3s"
version = "0.1.2"
description = "Pandas-focused Semantic Search Suite - Simple and powerful semantic search for pandas DataFrames using Sentence Transformers and FAISS."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "NekoBend" }]
keywords = [
    "pandas",
    "semantic-search",
    "faiss",
    "sentence-transformers",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "faiss-cpu>=1.11.0",
    "pandas>=2.3.0",
    "safetensors>=0.5.3",
    "sentence-transformers>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.7", "pandas-stubs>=2.2.3.250527"]
