[project]
name = "panda-vector-search"
version = "1.0.0"
description = "Pandas-focused Semantic Search Suite - Simple and powerful semantic search for pandas DataFrames using Sentence Transformers and FAISS."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NekoBend" }]
keywords = [
    "pandas",
    "semantic-search",
    "faiss",
    "sentence-transformers",
    "nlp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "faiss-cpu>=1.11.0",
    "huggingface-hub[hf-xet]>=0.32.4",
    "pandas>=2.3.0",
    "safetensors>=0.5.3",
    "sentence-transformers>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.3.250527",
]
